# binary-event-forecasting

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DATA_DICTIONARY.md  DEVELOPMENT.md  DOMAIN_GLOSSARY.md  README.md  SECURITY_BOUNDARIES.md  TESTING.md  deny.toml  justfile  pyproject.toml  rust-toolchain.toml  verification_matrix_v1_2.csv
.github/workflows/: architecture.yml  contracts.yml  pending-workflows.yml  python.yml  replay.yml  rust.yml  verification.yml
config/: core.toml  mock-gateway.toml
contracts/: canonicalization.md
contracts/examples/: forecast-message-valid.v1.json
contracts/schemas/: disposition-status.v1.json  forecast-message.v1.json  market-event.v1.json  mock-lifecycle-event.v1.json  receipt-status.v1.json  simulation-intent.v1.json
crates/domain-types/: Cargo.toml  README.md
crates/domain-types/src/: cash.rs  checked.rs  lib.rs  notional.rs  price.rs  probability.rs  quantity.rs  signed_pnl.rs
crates/experiment-control/: Cargo.toml
crates/experiment-control/src/: lib.rs
crates/forecast-policy/: Cargo.toml
crates/forecast-policy/src/: lib.rs
crates/journal/: Cargo.toml  README.md
crates/journal/src/: db.rs  lib.rs  recovery.rs  spool.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: cash_ledger.rs  inventory.rs  lib.rs  settlement.rs
crates/market-state/: Cargo.toml
crates/market-state/src/: depth.rs  feed.rs  lib.rs  order_book.rs  snapshot.rs
crates/matching/: Cargo.toml  README.md
crates/matching/src/: cost_model.rs  immediate.rs  inventory.rs  lib.rs  passive_queue.rs  virtual_depth.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: canonical.rs  disposition.rs  enums.rs  forecast.rs  framing.rs  intent.rs  lib.rs  manifest.rs  market_event.rs  mock.rs  receipt.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
data/traces/golden/: forecast-messages.jsonl  manifest.json  market-events.jsonl
deploy/containers/: core-engine.Dockerfile  mock-gateway.Dockerfile
deploy/network-policies/: replay-isolation.yaml
deploy/seccomp/: replay-profile.json
devtools/context-indexer/: README.md
devtools/dependency-boundary-checker/: README.md  main.py
devtools/requirements-validator/: README.md
devtools/trace-inspector/: README.md
docs/adr/: ADR-001-monorepo-with-process-separated-services.md  ADR-002-rust-owns-canonical-state.md  ADR-003-json-schema-is-cross-process-contract.md  ADR-004-scaled-integer-numeric-types.md  ADR-005-sqlite-local-journal-postgres-research-store.md  ADR-006-parquet-for-high-volume-traces.md  ADR-007-content-addressed-artifacts.md  ADR-008-linux-af-unix-ipc.md  ADR-009-no-real-service-adapters.md  ADR-010-requirements-matrix-enforced-by-ci.md  ADR-011-canonical-json-and-hashing.md  ADR-012-agent-context-retrieval-strategy.md
docs/specification/: binary_event_forecasting_srs_v1_2.md
python-packages/audit-export/: pyproject.toml
python-packages/audit-export/src/audit_export/: __init__.py
python-packages/calibration/: pyproject.toml
python-packages/calibration/src/calibration/: __init__.py
python-packages/contracts-py/: README.md  pyproject.toml
python-packages/contracts-py/src/contracts_py/: __init__.py  disposition.py  enums.py  forecast.py  intent.py  receipt.py
python-packages/experiments/: pyproject.toml
python-packages/experiments/src/experiments/: __init__.py
python-packages/inference/: pyproject.toml
python-packages/inference/src/inference/: __init__.py
python-packages/preprocessing/: pyproject.toml
python-packages/preprocessing/src/preprocessing/: __init__.py
python-packages/reporting/: pyproject.toml
python-packages/reporting/src/reporting/: __init__.py
python-packages/source-ingestion/: pyproject.toml
python-packages/source-ingestion/src/source_ingestion/: __init__.py
scripts/: bootstrap.sh  generate_repo_map.py  run_offline_replay.sh  validate_contracts.py  validate_requirements.py
services/core-engine/: Cargo.toml
services/core-engine/src/: config.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs
services/core-engine/src/modes/: mock.rs  mod.rs  prospective.rs  replay.rs
services/intelligence-plane/: README.md  pyproject.toml
services/intelligence-plane/src/intelligence_plane/: __init__.py  ipc.py
services/mock-gateway/: Cargo.toml
services/mock-gateway/src/: config.rs  lib.rs  main.rs  scenario.rs  server.rs  trace.rs
storage/artifact-store/: README.md
storage/parquet/schemas/: README.md
storage/postgres/migrations/: 001_initial_schema.sql
storage/sqlite/migrations/: 001_initial_journal.sql
var/: create_tests.py  rewrite.py
verification/: pending_verifications.csv  verification_matrix_v1_2.csv
verification/tests/: test_smoke.py
