[package]
name = "journal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain-types.workspace = true
protocol.workspace = true
ledger.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
