[package]
name = "core-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "core-engine"
path = "src/main.rs"

[dependencies]
# Internal crates (dependency order)
domain-types.workspace = true
protocol.workspace = true
market-state.workspace = true
forecast-policy.workspace = true
matching.workspace = true
ledger.workspace = true
journal.workspace = true
replay.workspace = true
experiment-control.workspace = true
telemetry.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Hashing
sha2.workspace = true
hex.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow = "1"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true

# CLI
clap.workspace = true
toml.workspace = true

# Database
rusqlite.workspace = true
tokio-postgres.workspace = true

# Parquet
parquet.workspace = true
arrow.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
