[project]
name = "intelligence-plane"
version = "0.1.0"
description = "Binary Event Forecasting — Python Intelligence and Audit Plane"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "UNLICENSED" }

dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "structlog>=24",
    "numpy>=2",
    "scipy>=1.14",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6",
    "ruff>=0.5",
]

[tool.uv.sources]
